Updated UI and fixed menu overlap issue

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -6,7 +6,8 @@
     flex-direction: column;
     align-items: center;
     padding-top: 20px;
-    padding-bottom: 250px;
+    padding-bottom: 1000px;
+  
 
     @include mobile{
         padding: 10rem 2rem 15rem 2rem;
