--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   padding-top:100px;
-  padding-bottom: 150px;
+  padding-bottom: 1500px;
   object-fit: cover;
 
   @include mobile{
