--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,4 +1,6 @@
 @import "../../global.scss";
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
+
 
 
 .topbar {
@@ -21,12 +23,15 @@
         .left{
             display: flex;
             align-items: center;
-            .logo{
+            .logo {
                 font-size: 40px;
-                font-weight: 700;
+                font-family: "Black Ops One", serif;
+                font-weight: 400;
+                font-style: normal;
                 text-decoration: none;
-                color:inherit;
+                color: inherit;
                 margin-right: 40px;
+                letter-spacing: 2px; /* Optional: adds spacing for elegance */
             }
 
             .itemContainer {
